[package]
name = "edmcoverlay"
version = "0.1.0"
authors = ["Ash Holland <ash@sorrel.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
color-eyre = "0.5.10"
eyre = "0.6.5"
lazy_static = "1.4"
libc = "0.2.82"
num_enum = "0.5.1"
regex = "1.4"
serde = { version = "1.0.120", features = ["derive"] }
serde-aux = "2.1"
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.1.0", features = ["full"] }
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

# improve performance of debug builds
[profile.dev.package.backtrace]
opt-level = 3
